--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,11 @@ plugins {
 
 android {
     namespace 'com.example.myapplication'
-    compileSdk 31
-
+    compileSdk 33
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -46,12 +45,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // dependencies for implementation of Daraja API
+    // dependencies for implementation of Daraja API by Mr. Licio Lentimo
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.jumadeveloper:networkmanager:0.0.2'
+    implementation 'com.github.jumadeveloper:networkmanager:0.0.2'//this
 
     implementation 'cn.pedant.sweetalert:library:1.3'//this
 
