--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-DARAJA_CONSUMER_KEY="add_consumer_key_here"
-DARAJA_CONSUMER_SECRET="add_consumer_secret_here"
+DARAJA_CONSUMER_KEY="RtbsGnwG0qzPYlBT6jizLkq8qBH8PCy6"
+DARAJA_CONSUMER_SECRET="pN9GF6SkBPaa5PGA"
