Finished Project by Mr. Licio Lentimo

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.enableJetifier=true
 android.nonTransitiveRClass=true
 DARAJA_CONSUMER_KEY="RtbsGnwG0qzPYlBT6jizLkq8qBH8PCy6"
 DARAJA_CONSUMER_SECRET="pN9GF6SkBPaa5PGA"
+org.gradle.unsafe.configuration-cache=true
