--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.jumadeveloper:networkmanager:0.0.2'//this
+    //implementation 'com.github.jumadeveloper:networkmanager:0.0.2'//this
 
-    implementation 'cn.pedant.sweetalert:library:1.3'//this
+    //implementation 'cn.pedant.sweetalert:library:1.3'//this
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
